AC_INIT(liboptimization-dispatchers-webots, 1.0)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_CONFIG_MACRO_DIR([m4])

AC_ISC_POSIX
AC_STDC_HEADERS
AC_PROG_CXX
AC_HEADER_STDC

AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_CONFIG_HEADERS(config.h)
AM_MAINTAINER_MODE

PKG_CHECK_MODULES(PACKAGE_DISPATCHERS, [
	liboptimization-1.0
])

AC_SUBST(PACKAGE_DISPATCHERS_CFLAGS)
AC_SUBST(PACKAGE_DISPATCHERS_LIBS)

AC_OUTPUT(
Makefile
src/Makefile
)
