AC_INIT(liboptimization-dispatchers-webots, 2.6)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_CONFIG_MACRO_DIR([m4])

AC_ISC_POSIX
AC_STDC_HEADERS
AC_PROG_CXX
AC_HEADER_STDC

AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_PROG_LN_S
AC_PATH_PROG(RM, rm)
AC_CONFIG_HEADERS(config.h)
AM_MAINTAINER_MODE

m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

PKG_CHECK_MODULES(PACKAGE_DISPATCHERS, [
	liboptimization-2.0 >= 2.2
])

AC_SUBST(PACKAGE_DISPATCHERS_CFLAGS)
AC_SUBST(PACKAGE_DISPATCHERS_LIBS)

AC_OUTPUT(
Makefile
src/Makefile
data/Makefile
)
